--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: yarn converge
+        run: yarn coverage
 
       - name: Push codecov report
         if: matrix.os == 'ubuntu-latest'
