--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run tests (without coverage)
         if: matrix.os != 'ubuntu-latest'
-        run: yarn test-one **/*_test.ts
+        run: yarn test-one "**/*_test.ts"
 
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
