--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A lib of utilities for trailmix.",
   "main": "mod.ts",
   "scripts": {
-    "test": "yarn test-one --coverage=./coverage/output **/*_test.ts",
-    "test-inspect": "yarn test-one --inspect **/*_test.ts",
+    "test": "deno test --unstable  --allow-net --import-map=import_map.json **/*_test.ts",
     "test-one": "deno test --unstable --allow-net --import-map=import_map.json",
+    "test-inspect": "deno test --unstable  --allow-net --import-map=import_map.json --inspect **/*_test.ts",
+    "test-coverage": "deno test --unstable --allow-net --import-map=import_map.json --coverage=./coverage/output **/*_test.ts",
     "coverage": "deno coverage --unstable ./coverage --lcov > ./coverage/lcov.info",
     "coverage-html": "genhtml -o coverage/html ./coverage/lcov.info"
   },
