--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,15 @@ jobs:
         with:
           deno-version: v1.8.1
 
-      - name: Run tests
+      - name: Run tests (ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: yarn test-coverage
 
-      - name: Run tests (without coverage)
-        if: matrix.os != 'ubuntu-latest'
+      - name: Run tests (macos)
+        if: matrix.os == 'macos-latest'
         run: yarn test
-
+      - name: Run tests (windows)
+        run: deno test --unstable  --allow-net --import-map=import_map.json **/*_test.ts
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
         run: yarn coverage
