--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,15 @@ jobs:
 
       - name: Run tests (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: yarn test-coverage
+        run: deno test --unstable --import-map=import_map.json --coverage=./coverage/output **/*_test.ts
 
       - name: Run tests (win/mac)
         if: matrix.os != 'ubuntu-latest'
-        run: deno test --unstable  --allow-net --import-map=import_map.json
+        run: deno test --unstable --import-map=import_map.json **/*_test.ts
+
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: yarn coverage
+        run: deno coverage --unstable ./coverage --lcov > ./coverage/lcov.info
 
       - name: Push codecov report
         if: matrix.os == 'ubuntu-latest'
