--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.eol": "\n",
+  // deno
   "deno.enable": true,
   "deno.lint": true,
   "deno.codeLens.implementations": true,
@@ -10,16 +11,14 @@
   "deno.suggest.completeFunctionCalls": true,
   "deno.suggest.paths": true,
   "deno.importMap": "./import_map.json",
+  // coverage
   "coverage-gutters.lcovname": "./coverage/lcov.info",
   "coverage-gutters.showGutterCoverage": true,
+  // ui
   "editor.snippetSuggestions": "inline",
   "typescript.suggest.completeJSDocs": true,
+  // formatter
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  // "editor.codeActionsOnSave": {
-  //   "source.fixAll.eslint": true,
-  //   "source.organizeImports.eslint": true
-  // },
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "editor.defaultFormatter": "denoland.vscode-deno"
 }
