--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,15 @@ jobs:
 
       - name: Run tests (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: deno test --unstable --import-map=import_map.json --coverage=./coverage/output
+        run: deno test --unstable --allow-read --allow-env --import-map=import_map.json --coverage=./coverage/output
 
       - name: Run tests (win/mac)
         if: matrix.os != 'ubuntu-latest'
-        run: deno test --unstable --import-map=import_map.json
+        run: deno test --unstable --allow-read --allow-env --import-map=import_map.json
 
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: deno coverage --unstable ./coverage --lcov > ./coverage/lcov.info
+        run: deno coverage --unstable --allow-read --allow-env ./coverage --lcov > ./coverage/lcov.info
 
       - name: Push codecov report
         if: matrix.os == 'ubuntu-latest'
