--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: deno coverage --unstable --allow-read --allow-env ./coverage --lcov > ./coverage/lcov.info
+        run: deno coverage --unstable ./coverage --lcov > ./coverage/lcov.info
 
       - name: Push codecov report
         if: matrix.os == 'ubuntu-latest'
