--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,24 +1,20 @@
 # codecov:
 #   notify:
 #     require_ci_to_pass: yes
-
 coverage:
   status:
     project:
-      default:
+      utilities:
         target: auto
         threshold: 7%
         base: auto
         if_ci_failed: success
-      color:
         flags:
           - color
-      common:
-        flags:
           - common
-      config:
-        flags:
           - config
+          - log
+          - watch
       test:
         target: 60%
         threshold: 10%
@@ -28,25 +24,47 @@ coverage:
   precision: 2
   round: down
   range: '70...100'
-
+# flag_management:
+#   # this section will govern all default rules of Flags
+#   default_rules:
+#     carryforward: true
+#     ignore:
+#       - "**/*_test.ts"
+#       - "**/*_test.tsx"
+#     paths:
+#       - "src/**"
+#     statuses: 
+#       - name_prefix: default_project
+#         type: project
+#         target: auto
+#         threshold: 1%
+#       - name_prefix: default_patch
+#         type: patch
+#         target: percent
+#         threshold: 80%
+ignore:
+  - "**/*_test.ts"
+  - "**/*_test.tsx"
 flags:
   color:
     paths:
       - src/color/**
-      - '!src/color/**_test.ts'
   common:
     paths:
       - src/common/**
-      - '!src/common/**_test.ts'
   config:
     paths:
       - src/config/**
-      - '!src/config/**_test.ts'
+  log:
+    paths:
+      - src/log/**
+  watch:
+    paths:
+      - src/watch/**
   test:
     paths:
       - test/**
-      - '!test/**/*_test.ts'
-      - '!src/**'
+
 parsers:
   gcov:
     branch_detection:
