--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,17 @@
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
-      "runtimeArgs": ["test", "--inspect=127.0.0.1:9229","--unstable", "--allow-read", "--allow-write", "--allow-env", "--import-map=import_map.json"],
+      "runtimeArgs": [
+        "test",
+        "--inspect=127.0.0.1:9229",
+        "--unstable",
+        "--allow-read",
+        "--allow-write",
+        "--allow-env",
+        "--import-map=import_map.json"
+      ],
       "port": 9229,
-      "outputCapture": "std",
+      "outputCapture": "std"
     }
   ]
 }
