--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Generate codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: deno coverage --unstable ./coverage --lcov > ./coverage/lcov.info
+        run: deno coverage --exclude="(_|.)conf(ig){0,1}\.(ts|js|tsx)" --exclude="_test\.(ts|js)" --unstable ./coverage --lcov > ./coverage/lcov.info
 
       - name: Push codecov report
         if: matrix.os == 'ubuntu-latest'
-        run: bash <(curl -s https://codecov.io/bash) -F color,common,config -c
+        run: bash <(curl -s https://codecov.io/bash) -F color,common,config,log -c
