--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,18 +23,23 @@ jobs:
         with:
           deno-version: v1.8.1
 
-      - name: Run tests (ubuntu)
+      - name: Run tests (linux)
         if: matrix.os == 'ubuntu-latest'
         run: deno test --unstable --allow-write --allow-read --allow-env --import-map=import_map.json --coverage=./coverage/output
 
-      - name: Run tests (win/mac)
+      - name: Run tests (win/darwin)
         if: matrix.os != 'ubuntu-latest'
         run: deno test --unstable --allow-write --allow-read --allow-env --import-map=import_map.json
 
       - name: Generate codecov report
-        if: matrix.os == 'ubuntu-latest'
+        if: matrix.os != 'macos-latest'
         run: deno coverage --exclude="(_|.)conf(ig){0,1}\.(ts|js|tsx)" --exclude="_test\.(ts|js)" --unstable ./coverage --lcov > ./coverage/lcov.info
 
-      - name: Push codecov report
+      - name: Push codecov report (linux)
         if: matrix.os == 'ubuntu-latest'
         run: bash <(curl -s https://codecov.io/bash) -F color,common,config,log -c
+      
+
+      - name: Push codecov report (win)
+        if: matrix.os == 'windows-latest'
+        run: bash <(curl -s https://codecov.io/bash) -F config -c
