--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: bash <(curl -s https://codecov.io/bash) -F color,common,config,log -c
       
-
       - name: Push codecov report (win)
         if: matrix.os == 'windows-latest'
-        run: bash <(curl -s https://codecov.io/bash) -F config -c
+        run: choco install codecov -F config
